# fastapi-web-dictionary

./: .gitignore  README.md  features.txt  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/data/: dict_repo.py  idea_repo.py  session_repo.py  user_repo.py  vocab_repo.py
app/db/: database.py
app/models/: dictionary.py  idea.py  user.py  vocab.py
app/service/: auth_service.py  dict_install_service.py  idea_service.py  mdx_service.py  security.py  user_service.py  vocab_service.py
app/web/: dependencies.py
app/web/routers/: admin_dicts.py  admin_users.py  auth.py  dict_assets.py  dictionary.py  history.py  home.py  ideas.py  profile.py  vocab.py
app/web/static/: style.css
app/web/templates/: admin_dicts.html  admin_users.html  base.html  dictionary.html  history.html  home.html  ideas.html  login.html  profile.html  register.html  vocab.html
