[project]
name = "fastapi-web-dictionary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.6",
    "jinja2>=3.1.6",
    "python-lzo>=1.15",
    "python-multipart>=0.0.22",
    "readmdict>=0.1.1",
    "uvicorn>=0.40.0",
]
